# kanal_B_telegrame

./: .gitignore  README.md  pyproject.toml  sources.yaml
.github/workflows/: daily_slot.yml  poll_telegram.yml
.tmp-storage-check/: backlog.json  current_draft.json  published.json  telegram_cursor.json
.tmp-storage-check-2/: backlog.json  current_draft.json  published.json  telegram_cursor.json
.tmp-storage-check-3/: telegram_cursor.json
.tmp-task6-check/: current_draft.json
.tmp-task6-check-2/: backlog.json  current_draft.json  published.json  telegram_cursor.json
.tmp-task6-check-3/: backlog.json  current_draft.json  telegram_cursor.json
docs/superpowers/plans/: 2026-04-19-ai-news-telegram-mvp.md  2026-04-20-ai-news-discovery-expansion.md
scripts/: poll_telegram_updates.py  run_daily_slot.py  run_local_polling.py  run_news_watcher.py
src/ai_news_bot/: __init__.py  approval.py  backlog.py  config.py  discovery.py  drafts.py  editorial.py  media.py  models.py  queries.py  ranking.py  rewriter.py  source_registry.py  storage.py  telegram_api.py  topics.py
src/ai_news_telegram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
state/: backlog.json  current_draft.json  owner_drafts.json  published.json  sent_topics.json  telegram_cursor.json
tests/: conftest.py  test_approval.py  test_backlog.py  test_config.py  test_discovery.py  test_drafts.py  test_editorial.py  test_media.py  test_ranking.py  test_rewriter.py  test_scripts.py  test_source_registry.py  test_storage.py  test_telegram_api.py  test_topics.py
(+3 files in other folders)
