[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-telegram"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32.0",
  "feedparser>=6.0.11",
  "trafilatura>=1.9.0",
  "deep-translator>=1.11.4",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
